# imhex-data-processor-zlib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
include/content/: nodes.h
romfs/lang/: en_US.json
source/: main.cpp
source/content/nodes/: deflate_node.cpp  raw_deflate_node.cpp  zlib_node.cpp
